--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,8 @@ body {
     text-align: center; 
 }
 
+logo {
+    border-top: 0;
+    font: 100%/1.6 palatino, georgia, serif;
+    padding: 0 1em 2em;
+}
