--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     text-align: center; 
 }
 
-logo {
+.logo {
     border-top: 0;
     font: 100%/1.6 palatino, georgia, serif;
     padding: 0 1em 2em;
