--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,10 @@ body {
 
 .logo {
     border-top: 0;
-    font: 100%/1.6 palatino, georgia, serif;
+    font: 15 palatino;
     padding: 0 1em 2em;
 }
 
 .nav {
-    font: 50%, serif;
+    font: 10, serif;
 }
