--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,41 @@
 body {
     margin : 0;
-    background: pink;
+    background: hsl(260, 5%, 76%);
     text-align: center; 
 }
 
 .logo {
     border-top: 0;
-    font: 100%/1.6 palatino, georgia, serif;
+    font: 200%/1.6 georgian;
     padding: 0 1em 2em;
 }
 
 .nav {
-    font: 50%, serif;
+    font: 150%/1.5 serif;
 }
+
+.semibold {
+    font-size: x-large;
+}
+
+h5 {
+    font-size: large
+}
+
+.projects-list {
+    border-color: #0c73e9;
+}
+
+  a:link { 
+    color: #0c73e9;
+    text-decoration: none; 
+  } 
+  a:visited { 
+    text-decoration: none; 
+  } 
+  a:hover { 
+    text-decoration: none; 
+  } 
+  a:active { 
+    text-decoration: none; 
+  }
