--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,13 @@ body {
     text-align: center; 
 }
 
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
+
 .logo {
     border-top: 0;
     font: 200%/1.6 georgian;
@@ -39,3 +46,4 @@ h5 {
   a:active { 
     text-decoration: none; 
   }
+
