--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
+
 body {
     margin : 0;
-    background: hsl(260, 5%, 76%);
+    background: var(--body-bg-color);
+    --body-bg-color: #eeedf0;
     text-align: center; 
 }
 
@@ -11,13 +13,29 @@ img {
   width: 60%;
 }
 
+
+
 .logo {
+  background : linear-gradient(var(--logo-bg-color), var(--body-bg-color));
+
+    --logo-bg-color: hsla(189, 48%, 61%, 0.807);
+    opacity: 1;
     border-top: 0;
-    font: 200%/1.6 georgian;
-    padding: 0 1em 2em;
+    font: 290%/1.6 georgian;
+    padding-bottom: 10;
+    a:link { 
+      color: #000000;
+      text-decoration: none; 
+    } 
+}
+
+.intro {
+    margin: 5%;
 }
 
 .nav {
+    
+    padding-top: 0%;
     font: 150%/1.5 serif;
 }
 
@@ -34,13 +52,16 @@ h5 {
 }
 
   a:link { 
-    color: #0c73e9;
+    color: #000000;
     text-decoration: none; 
-  } 
+  }
+ 
   a:visited { 
+    color: #7b2dc4;
     text-decoration: none; 
   } 
-  a:hover { 
+  a:hover {
+    color: #7b2dc4;
     text-decoration: none; 
   } 
   a:active { 
