--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@ body {
     text-align: center; 
 }
 
+main {
+  --main-bg-color:  var(--logo-bg-color);
+}
+
 img {
   display: block;
   margin-left: auto;
@@ -27,7 +31,7 @@ header{
     border-top: 0;
     font: 290%/1.6 georgian;
     padding-bottom: 10;
-    
+
     a:visited { 
       color: #000000;
       text-decoration: none; 
