updated link hover on logo

--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,10 @@ header{
       color: #000000;
       text-decoration: none; 
     } 
+      a:hover { 
+      color: #000000;
+      text-decoration: none; 
+      }
 }
 
 .intro {
