--- a/styles.css
+++ b/styles.css
@@ -27,9 +27,8 @@ header{
     background : linear-gradient(var(--logo-bg-color), var(--body-bg-color));
     margin-top: 0;
     --logo-bg-color: hsla(189, 48%, 61%, 0.807);
-    opacity: 1;
     border-top: 0;
-    font: 290%/1.6 georgian;
+    font: 400%/1.6 georgian;
     padding-bottom: 10;
 
     a:visited { 
@@ -43,13 +42,22 @@ header{
 }
 
 .intro {
-    margin: 5%;
+    padding-top: 0;
+    padding-bottom: 5%;
+    margin-right: 15%;
+    margin-left: 15%;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .nav {
-    
-    padding-top: 0%;
-    font: 150%/1.5 serif;
+    padding: 0;
+    font: 250%/1.5 serif;
+
+    a{
+      padding: 20px;
+      padding-bottom: 0px;
+    }
 }
 
 .semibold {
